k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
        - name: nextjs
          image: yashmevat/nextjs-neon:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
