k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: todo-app
spec:
  type: ClusterIP
  selector:
    app: nextjs
  ports:
    - port: 3000
      targetPort: 3000
